<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_1" />

    <TextView
        android:id="@+id/item_2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_2" />

    <TextView
        android:id="@+id/item_3_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_3" />

    <TextView
        android:id="@+id/item_4_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_4" />

    <TextView
        android:id="@+id/item_5_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_5" />

    <TextView
        android:id="@+id/item_6_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/blue_white"
        android:textSize="22sp"
        tools:text="@string/news_6" />

</androidx.appcompat.widget.LinearLayoutCompat>